Fri Mar 12 09:13:28 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * configure.in: removed 'eval' expressions which caused the 'NONE' prefix
      path to be instantiated and the make script to hang
    * acinclude.in: fixed AC_DEFINEs for SSL and ZLIB check macros, which prevented
      autoheader (and therefore autoreconf) to correctly work
    * moved manual pages from htdoc to installdir
    * htdoc/[manpages].in: removed
    * installdir/*.[1,8]: removed man pages (htdig-pdfparser.1, htdig.1,
      htdump.1, htfuzzy.1, htload.1, htmerge.1, htnotify.1, htpurge.1,
      htsearch.1, htstat.1, rundig.1, htdigconfig.8)
    * installdir/*.[1,8].in: added pre-configure man pages (htdig-pdfparser.1.in,
      htdig.1.in, htdump.1.in, htfuzzy.1.in, htload.1.in, htmerge.1.in, htnotify.1.in,
      htpurge.1.in, htsearch.1.in, htstat.1.in, rundig.1.in, htdigconfig.8.in)
    * regenerated configure scripts with autoreconf
    * fixes bug #909674

Sat 21 Feb 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * installdir/HtFileType: Use mktemp to create safe temp file (bug #901555)

Wed Feb 25 11:14:45 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdocs/THANKS.html: added Robert Ribnitz to the 'thanks' page and fixed
      Nenciarini's position (it was not in alphabetical order - sorry!).

Wed Feb 25 11:02:37 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * installdir/*.[1,8]: added man pages (htdig-pdfparser.1, htdig.1,
      htdump.1, htfuzzy.1, htload.1, htmerge.1, htnotify.1, htpurge.1,
      htsearch.1, htstat.1, rundig.1, htdigconfig.8) provided by
      Robert Ribnitz <ribnitz@linuxbourg.ch> of the Debian Project
    * installdir/Makefile.am: prepared the automake script for correctly
      handling the man pages

Sat 21 Feb 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * htsearch/htsearch.cc:
      Back out change of 21 December, as it causes problems with characters