@@ -1,3 +1,8 @@
+Mon Mar 15 11:56:04 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>
+
+    * htsearch/Display.cc: changed (and fixed) the date factor formula as
+    Lachlan and David Lippi suggested, in order not to give negative results.
+
 Fri Mar 12 09:13:28 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>
 
     * configure.in: removed 'eval' expressions which caused the 'NONE' prefix
